--- a/themes/hugo-creative-portfolio-theme/config.toml
+++ b/themes/hugo-creative-portfolio-theme/config.toml
@@ -21,6 +21,7 @@ googleAnalytics = ""
   sidebarAbout = [
     "I'm an antidisciplinary engineer, designer, educator, and learner with a degree in Experience Design from Olin College of Engineering.",
     "I'm very serious about having fun."
+    "(Pardon my dust! This website is a work in progress. Please feel free to contact me about broken links, images, or anything else!)"
   ]
   # Contact page
      # Since this template is static, the contact form uses www.formspree.io as a
